nginx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openops-nginx
  namespace: openops
  labels:
    app: openops-nginx
    app.kubernetes.io/name: openops-nginx
    app.kubernetes.io/instance: openops-nginx
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: "50%"
  selector:
    matchLabels:
      app: openops-nginx
      app.kubernetes.io/name: openops-nginx
      app.kubernetes.io/instance: openops-nginx
  template:
    metadata:
      labels:
        app: openops-nginx
        app.kubernetes.io/name: openops-nginx
        app.kubernetes.io/instance: openops-nginx
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: openops-nginx
      serviceAccountName: openops
      priorityClassName: high-priority-apps
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsGroup: 33
        runAsUser: 33
      containers:
      - name: openops-nginx
        image: nginxinc/nginx-unprivileged:1.25
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: tcp-nginx
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-default
          subPath: default.conf
        - mountPath: /tmp
          name: nginxtmp
      volumes:
      - name: nginx-default
        configMap:
          name: nginx-default
      - name: nginxtmp
        emptyDir: {}
