nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: openops
  labels:
    app: openops-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: tcp-nginx
  selector:
    app: openops-nginx
