nginx/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: openops
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openops
  namespace: openops
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`openops.vicrem.se`)
    kind: Rule
    services:
    - name: nginx
      port: 80
      sticky:
        cookie:
          httpOnly: true
    middlewares:
    - name: redirect-to-https
      namespace: openops

  # To prevent mixed content accessing Table service 
  - match: Host(`openops-tables.vicrem.se`)
    kind: Rule
    services:
    - name: tables
      port: 80
      sticky:
        cookie:
          httpOnly: true
    middlewares:
    - name: redirect-to-https
      namespace: openops
  tls: {}
